Improved Paths in Swagger.json
